- GUI:  * fixed: color of table header headlines in Firefox  * fixed bug #148: alias domainname was false in adminlog  * fixed: layout issues on add_mail_acc.tpl
git-svn-id: https://i-mscp.svn.sourceforge.net/svnroot/i-mscp/trunk@453 15a38060-5cfe-4f5c-bf9d-b5d42b1378a7

--- a/gui/themes/omega_original/css/vhcs.css
+++ b/gui/themes/omega_original/css/vhcs.css
@@ -165,12 +165,13 @@ td.content2 {
 
 td.content3 {
 	font-size: 			12px;
-	color: 				#FFFFFF;
+	color: 				#ffffff;
 	white-space: 		nowrap;
-	background: 		#000;
+	background: 		#000000;
 	white-space: 		nowrap;
 	height: 			30px;
 	padding: 			2px;
+	padding-left:		5px;
 	border-bottom:		2px solid #000000;
 	border-right:		2px solid #000000;
 	border-top:			2px solid #eeeeee;
